@@ -714,6 +714,7 @@ define function, begin
 687,textboxcontrolsaresuspended,0 # Return true if "suspend textbox control" is active
 688,menuitemcount,1,0         # Number of menu items in a menu, including invisible ones
 689,visiblemenuitemcount,1,0  # Number of visible menu items in a menu
+690,replacesubstring,5,-1,-1,-1,-1,0  # Replace text in a string (in string ID, replace what ID, with what ID, max replacements, case insensitive)
 
 # Don't forget to update maxScriptCmdID in const.bi when adding new commands
 end
